--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ additional_scripts: '' # No page-specific scripts identified for index
                 <div class="card-back">
                     <h2>Calm Your Mind</h2>
                     <p>Box Breathing involves inhaling, holding, exhaling, and holding your breath for equal counts. This technique activates the parasympathetic nervous system, reducing stress and anxiety while enhancing focus. Practice for 5 minutes, 1-2 times daily, to feel immediate relaxation and improved emotional regulation.</p>
-                    <button class="start-btn" onclick="window.location.href='exercise.html?type=box'">Begin Session</button>
+                    <button class="start-btn" onclick="window.location.href='/exercise/?type=box'">Begin Session</button>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@ additional_scripts: '' # No page-specific scripts identified for index
                 <div class="card-back">
                     <h2>Find Your Balance</h2>
                         <p>Instant Zen emphasizes a longer exhale compared to the inhale, promoting deep relaxation. This method activates the parasympathetic system, helping you quickly reduce stress and anxiety. Start with 5-10 minutes daily, and you’ll notice calming effects almost immediately.</p>
-                    <button class="start-btn" onclick="window.location.href='exercise.html?type=48'">Begin Session</button>
+                    <button class="start-btn" onclick="window.location.href='/exercise/?type=48'">Begin Session</button>
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@ additional_scripts: '' # No page-specific scripts identified for index
                 <div class="card-back">
                     <h2>Boost Your Resilience</h2>
                     <p>The Wim Hof Method combines deep breathing with breath holds, stimulating both the sympathetic and parasympathetic systems. This technique can enhance oxygen uptake, increase energy, and even boost immune function over time. Practice for 15-20 minutes once a day to experience increased vitality and stress resilience.</p>
-                    <button class="start-btn" onclick="window.location.href='exercise.html?type=wim-hof'">Begin Session</button>
+                    <button class="start-btn" onclick="window.location.href='/exercise/?type=wim-hof'">Begin Session</button>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@ additional_scripts: '' # No page-specific scripts identified for index
                             <div class="card-back">
                                 <h2>Deep Relaxation</h2>
                                 <p>Focus on breathing deep into your belly, allowing it to gently rise on the inhale and fall on the exhale. This engages the diaphragm for calming, efficient breaths, activating the body's relaxation response. Inhale slowly through your nose, exhale slowly through your nose or mouth. Practice for 5-10 minutes, 1-2 times daily or whenever feeling stressed, to notice reduced tension and increased calm..</p>
-                                <button class="start-btn" onclick="window.location.href='exercise.html?type=belly'">Begin Session</button>
+                                <button class="start-btn" onclick="window.location.href='/exercise/?type=belly'">Begin Session</button>
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@ additional_scripts: '' # No page-specific scripts identified for index
                             <div class="card-back">
                                 <h2>Calm & Balance</h2>
                                 <p>Inspired by Buteyko principles, this exercise uses gentle, light nasal breathing with brief, comfortable pauses after exhaling. It aims to normalize breathing patterns and gently increase CO2 tolerance, promoting calm and nervous system balance. Always breathe softly in and out through your nose. Consistency is key; practice for 5 minutes, 2-3 times daily, focusing on ease, to potentially improve respiratory comfort.</p>
-                                <button class="start-btn" onclick="window.location.href='exercise.html?type=buteyko'">Begin Session</button>
+                                <button class="start-btn" onclick="window.location.href='/exercise/?type=buteyko'">Begin Session</button>
                             </div>
                         </div>
                     </div>
