amended and formatted website

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ additional_scripts: ''
 <main class="container blog-page"> <!-- Added blog-page class for potential specific styling -->
 
     <!-- Blog page header section -->
-    <div class="blog-header">
+    <div class="page-hero">
         <h1>Blog Articles</h1>
         <p class="blog-intro">Discover insights, techniques, and the science behind breathwork.</p> <!-- Added class for styling -->
     </div>
