--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ additional_scripts: '' # No page-specific scripts identified for index
         <!-- Button placed correctly after the target paragraph -->
         <button id="read-more-toggle" class="read-more-btn" aria-expanded="false">Read More</button>
     </div>
-
+    <div class="view-all-link-container">
+        <a href="/blog/" class="view-all-btn">View All Articles</a> {# Ensure '/blog/' is the correct path to your blog index #}
+   </div>
     <div class="card-container">
         <!-- Box Breathing Card -->
         <div class="card" data-technique="box">
@@ -77,7 +79,7 @@ additional_scripts: '' # No page-specific scripts identified for index
                             </div>
                             <div class="card-back">
                                 <h2>Deep Relaxation</h2>
-                                <p>Focus on breathing deep into your belly, allowing it to gently rise on the inhale and fall on the exhale. This engages the diaphragm for calming, efficient breaths, activating the body's relaxation response. Inhale slowly through your nose, exhale slowly through your nose or mouth. Practice for 5-10 minutes, 1-2 times daily or whenever feeling stressed, to notice reduced tension and increased calm..</p>
+                                <p>Focus on breathing deep into your belly, allowing it to gently rise on the inhale and fall on the exhale. This activates body's relaxation response. Inhale slowly through your nose, exhale slowly through your nose or mouth. Practice for 5-10 minutes, 1-2 times daily or whenever feeling stressed, or reduce tension.</p>
                                 <button class="start-btn" onclick="window.location.href='/exercise/?type=belly'">Begin Session</button>
                             </div>
                         </div>
@@ -94,36 +96,11 @@ additional_scripts: '' # No page-specific scripts identified for index
                             </div>
                             <div class="card-back">
                                 <h2>Calm & Balance</h2>
-                                <p>Inspired by Buteyko principles, this exercise uses gentle, light nasal breathing with brief, comfortable pauses after exhaling. It aims to normalize breathing patterns and gently increase CO2 tolerance, promoting calm and nervous system balance. Always breathe softly in and out through your nose. Consistency is key; practice for 5 minutes, 2-3 times daily, focusing on ease, to potentially improve respiratory comfort.</p>
+                                <p>Inspired by Buteyko principles, uses gentle, light nasal breathing through your nose with brief, comfortable pauses after exhaling. It normalizes breathing patterns and gently increase CO2 tolerance, promoting calm and nervous system balance. Practice for 5 minutes, 2-3 times daily, to potentially improve respiratory comfort.</p>
                                 <button class="start-btn" onclick="window.location.href='/exercise/?type=buteyko'">Begin Session</button>
                             </div>
                         </div>
                     </div>
     </div>
-    <!-- Replace the existing blog container section -->
-    <section class="blog-container">
-        <h2 class="section-title">Latest Articles</h2>
-        <div class="articles-grid">
-            <!-- Reverse the collection first (latest first), then limit to 3 -->
-            {% set latestPosts = collections.post | reverse | slice(1) %}
-            {% for post in latestPosts %}
-                <article class="article-card">
-                    <div class="article-content">
-                        <span class="article-category">{{ post.data.category | default("Breathing Technique") }}</span>
-                        <h3 class="article-title">{{ post.data.title }}</h3>
-                        <p class="article-excerpt">
-                            {{ post.data.description }}
-                        </p>
-                        <a href="{{ post.url }}" class="article-link">Read More →</a>
-                    </div>
-                </article>
-            {% else %}
-                <p>No articles found yet.</p>
-            {% endfor %}
-        </div>
-        {# Add a prominent link to the main blog page below the latest article card #}
-        <div class="view-all-link-container">
-             <a href="/blog/" class="view-all-btn">View All Articles</a> {# Ensure '/blog/' is the correct path to your blog index #}
-        </div>
-    </section>
+
         </main>
