--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ additional_head_content: '<link rel="stylesheet" href="/styles/main.css">'
 additional_scripts: '' # No page-specific scripts identified for index
 ---
 
-<main>
     <div class="hero">
         <h2>Welcome to Simple Breathwork!</h2>
         <!-- Combined the two paragraphs into one with the correct ID -->
@@ -18,7 +17,7 @@ additional_scripts: '' # No page-specific scripts identified for index
         <button id="read-more-toggle" class="read-more-btn" aria-expanded="false">Read More</button>
     </div>
     <div class="view-all-link-container">
-        <a href="/blog/" class="view-all-btn">View All Articles</a> {# Ensure '/blog/' is the correct path to your blog index #}
+        <a href="/blog/" class="view-all-btn">View All Articles</a>
    </div>
     <div class="card-container">
         <!-- Box Breathing Card -->
@@ -103,4 +102,4 @@ additional_scripts: '' # No page-specific scripts identified for index
                     </div>
     </div>
 
-        </main>
+
