--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: base.html
 title: Simple Breathwork - Calm Your Mind, Energize Your Body
 description: Simple Breathwork homepage providing overview and links to techniques.
-additional_head_content: '<link rel="stylesheet" href="/styles/main.css">'
-additional_scripts: '' # No page-specific scripts identified for index
+additional_head_content: ''
+additional_scripts: '' 
 ---
 
-    <div class="hero">
+<div class="hero">
         <h2>Welcome to Simple Breathwork!</h2>
         <!-- Combined the two paragraphs into one with the correct ID -->
         <p id="hero-description">
@@ -15,11 +15,11 @@ additional_scripts: '' # No page-specific scripts identified for index
         </p>
         <!-- Button placed correctly after the target paragraph -->
         <button id="read-more-toggle" class="read-more-btn" aria-expanded="false">Read More</button>
-    </div>
-    <div class="view-all-link-container">
+</div>
+<div class="view-all-link-container">
         <a href="/blog/" class="view-all-btn">View All Articles</a>
-   </div>
-    <div class="card-container">
+</div>
+<div class="card-container">
         <!-- Box Breathing Card -->
         <div class="card" data-technique="box">
             <div class="card-inner">
@@ -100,6 +100,6 @@ additional_scripts: '' # No page-specific scripts identified for index
                             </div>
                         </div>
                     </div>
-    </div>
+</div>
 
 
