--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@ description: Simple Breathwork homepage providing overview and links to techniqu
 additional_head_content: ''
 additional_scripts: '' 
 ---
-
 <div class="hero">
-        <h2>Welcome to Simple Breathwork!</h2>
-        <!-- Combined the two paragraphs into one with the correct ID -->
-        <p id="hero-description">
-            Welcome to Simple Breathwork, your sanctuary for harnessing one of the most powerful, yet often overlooked, tools for well-being: your breath. We believe that everyone deserves easy access to techniques that can instantly shift their mental and physical state. Forget complicated apps or expensive courses; this platform offers straightforward, visual guides to scientifically-backed breathing patterns designed to reduce stress, enhance focus, manage anxiety, and even boost your energy levels naturally.
-            Dive into potent methods like the calming <span class="box-text">Box Breathing</span>, the deeply relaxing <span class="zen-text">4-8 "Instant Zen"</span> rhythm, or the invigorating <span class="wim-text">Wim Hof</span> technique. Each card below represents a unique path to transforming how you feel, moment by moment. Our goal is to empower you with simple, effective breathwork tools you can use anywhere, anytime. Choose an exercise that resonates with your needs today and experience the profound impact of intentional breathing. It's <span class="free-text">FREE</span> to use without any hidden fees, enjoy!
-        </p>
-        <!-- Button placed correctly after the target paragraph -->
-        <button id="read-more-toggle" class="read-more-btn" aria-expanded="false">Read More</button>
+<h2>Welcome to Simple Breathwork!</h2>
+<!-- Combined the two paragraphs into one with the correct ID -->
+<p id="hero-description">
+Welcome to Simple Breathwork, your sanctuary for harnessing one of the most powerful, yet often overlooked, tools for well-being: your breath. We believe that everyone deserves easy access to techniques that can instantly shift their mental and physical state. Forget complicated apps or expensive courses; this platform offers straightforward, visual guides to scientifically-backed breathing patterns designed to reduce stress, enhance focus, manage anxiety, and even boost your energy levels naturally.
+Dive into potent methods like the calming <span class="box-text">Box Breathing</span>, the deeply relaxing <span class="zen-text">4-8 "Instant Zen"</span> rhythm, or the invigorating <span class="wim-text">Wim Hof</span> technique. Each card below represents a unique path to transforming how you feel, moment by moment. Our goal is to empower you with simple, effective breathwork tools you can use anywhere, anytime. Choose an exercise that resonates with your needs today and experience the profound impact of intentional breathing. It's <span class="free-text">FREE</span> to use without any hidden fees, enjoy!
+</p>
+<!-- Button placed correctly after the target paragraph -->
+<button id="read-more-toggle" class="read-more-btn" aria-expanded="false">Read More</button>
 </div>
 <div class="view-all-link-container">
-        <a href="/blog/" class="view-all-btn">View All Articles</a>
+<a href="/blog/" class="view-all-btn">View All Articles</a>
 </div>
 <div class="card-container">
+<!-- Rest of your cards... -->
         <!-- Box Breathing Card -->
         <div class="card" data-technique="box">
             <div class="card-inner">
