index.html and .htaccess updated

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Dive into potent methods like the calming <span class="box-text">Box Breathing</
     </div>
     
     <div class="article-content">
-        <p>Welcome to Simple Breathwork! We believe that understanding the incredible power hidden within your own breath is the first step towards a healthier, more resilient life. Breathing is an automatic process, happening around 20,000 times a day without a conscious thought. Yet, when you learn to guide your breath intentionally through "breathwork," you tap into a potent, natural tool that can significantly impact your physical state, mental clarity, and emotional balance. This article delves into the fascinating science of your respiratory system and explores how conscious breathing techniques can become your ally in various aspects of life, from managing stress to enhancing physical performance.</p>
+        <p>We believe that understanding the incredible power hidden within your own breath is the first step towards a healthier, more resilient life. Breathing is an automatic process, happening around 20,000 times a day without a conscious thought. Yet, when you learn to guide your breath intentionally through "breathwork," you tap into a potent, natural tool that can significantly impact your physical state, mental clarity, and emotional balance. This article delves into the fascinating science of your respiratory system and explores how conscious breathing techniques can become your ally in various aspects of life, from managing stress to enhancing physical performance.</p>
 
         <hr class="article-divider">
 
